# nr-arch-choreography-saga

./: README.md  SECURITY.md  docker-compose.yml
.github/workflows/: merge-main.yml  pr-open.yml  unit-tests.yml
common/: nats.jetstream.ha.dc.yml  openshift.init.yml
consumer-go/: Dockerfile  external-consumer.go  go.mod  go.sum  main.go  openshift.deploy.yml
consumer-node/: openshift.deploy.yml  package-lock.json  package.json
consumer-node/src/: app.js  server.js
consumer-node/src/email/: ches-service.js  connection.js
consumer-node/src/messaging/: event-subscriber.js  nats-con.js
consumer-python/: Dockerfile  main.py  openshift.deploy.yml  pyproject.toml
consumer-python/messaging/: emailhelper.py  messagehandler.py
consumer-rust/: Cargo.toml  Dockerfile  openshift.deploy.yml  recipe.json
consumer-rust/src/: main.rs
database/: Dockerfile  openshift.deploy.yml
database/postgis/: Dockerfile
database/templates/: openshift.deploy.yml
frontend/api/: Dockerfile  openshift.deploy.yml  package-lock.json  package.json
frontend/api/src/: app.js  server.js
frontend/api/src/messaging/: event-subscriber.js  nats-con.js
frontend/api/src/socket/: socket.js
frontend/static/: Caddyfile  Dockerfile  openshift.deploy.yml  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
frontend/static/src/: App.vue  main.ts
frontend/static/src/components/: HelloWorld.vue  Map.vue
frontend/static/src/layouts/: MainLayout.vue
publisher-api/: pom.xml
publisher-java-api/: Dockerfile  openshift.deploy.yml  pom.xml
(+44 files in other folders)
