[package]
name = "consumer_rust"
version = "0.1.0"
edition = "2021"


[dependencies]
actix-web = "4.3.1"
actix-cors = "0.6.4"
serde_json = "1.0.93"
cloudevents-sdk = { version = "0.7.0",features = ["actix"] }
url = { version = "2.3.1" }
env_logger = "0.10.0"
async-nats = "0.28.0"
futures = "0.3.26"
tokio = { version = "1.26.0", features = ["full"] }
